--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="script.js"></script>
     <title>Login Form</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header>Login Form</header>
+      <form action="#">
+        <div class="field email">
+          <div class="input-area">
+            <input type="text" placeholder="Email Address" />
+            <i class="icon fa-solid fa-envelope"></i>
+            <i
+              class="error error-icon fa-sharp fa-solid fa-circle-exclamation"
+            ></i>
+          </div>
+          <div class="error error-txt">Email can't be blank</div>
+        </div>
+        <div class="field password">
+          <div class="input-area">
+            <input type="password" placeholder="Password" />
+            <i class="icon fa-solid fa-lock"></i>
+            <i
+              class="error error-icon fa-sharp fa-solid fa-circle-exclamation"
+            ></i>
+          </div>
+          <div class="error error-txt">Password can't be blank</div>
+        </div>
+        <div class="pass-link"><a href="#">Forgot password?</a></div>
+        <input type="submit" value="Login" />
+      </form>
+      <div class="signup-link">Not yet member? <a href="#">Signup now</a></div>
+    </div>
+  </body>
 </html>
